load(
    "//ign_bazel:build_defs.bzl",
    "IGNITION_FEATURES",
    "IGNITION_ROOT",
    "IGNITION_VISIBILITY",
    "cmake_configure_file",
    "generate_include_header",
    "generate_yaml",
    "ign_config_header",
    "ign_export_header",
)

load(
    "@bazelruby_rules_ruby//ruby:defs.bzl",
    "ruby_binary",
    "ruby_library",
    "ruby_rspec",
    "ruby_test",
)

package(
    default_visibility = IGNITION_VISIBILITY,
    features = IGNITION_FEATURES,
)

PROJECT_NAME = "ignition-launch"

PROJECT_MAJOR = 4

PROJECT_MINOR = 0

PROJECT_PATCH = 0

ign_config_header(
    name = "config",
    src = "include/ignition/launch/config.hh.in",
    cmakelists = ["CMakeLists.txt"],
    project_name = PROJECT_NAME,
    project_version = (PROJECT_MAJOR, PROJECT_MINOR, PROJECT_PATCH),
)

ign_export_header(
    name = "include/ignition/launch/Export.hh",
    export_base = "IGNITION_LAUNCH",
    lib_name = "ignition-launch",
    visibility = ["//visibility:private"],
)

public_headers_no_gen = [
    "include/ignition/launch/Plugin.hh",
]

private_headers = [
    "src/Manager.hh",
    "src/vendor/backward.hpp",
]

sources = [
    "src/Manager.cc",
]

test_sources = [
    "src/Manager_TEST.cc",
]

plugins = [
    "joystick",
    "joy_to_twist",
]

generate_include_header(
    name = "launchhh_genrule",
    out = "include/ignition/launch.hh",
    hdrs = public_headers_no_gen + [
        "include/ignition/launch/config.hh",
        "include/ignition/launch/Export.hh",
    ],
)

public_headers = public_headers_no_gen + [
    "include/ignition/launch/config.hh",
    "include/ignition/launch/Export.hh",
    "include/ignition/launch.hh",
]

cc_library(
    name = "ign_launch",
    srcs = sources + private_headers,
    hdrs = public_headers,
    defines = [
        "BAZEL_IGN_PREFIX='\"ign_tools/\"'",
    ],
    includes = [
        "include",
        "src",
    ],
    deps = [
        IGNITION_ROOT + "ign_bazel:utilities",
        IGNITION_ROOT + "ign_common",
        IGNITION_ROOT + "ign_msgs",
        IGNITION_ROOT + "ign_plugin",
        IGNITION_ROOT + "ign_plugin/loader",
        "@zmq",
    ],
)

cc_binary(
    name = "libignition-launch.so",
    srcs = ["src/ign.cc", "src/ign.hh"],
    includes = ["src"],
    linkshared = True,
    linkstatic = False,
    deps = [":ign_launch"],
)

cc_binary(
    name = "libignition-launch-gazebo.so",
    srcs = glob(
        [
            "plugins/gazebo_server/*.cc",
            "plugins/gazebo_server/*.hh",
        ],
        allow_empty = False,
    ),
    linkshared = True,
    deps = [
        IGNITION_ROOT + "ign_gazebo",
        IGNITION_ROOT + "ign_launch",
        IGNITION_ROOT + "ign_plugin/register",
    ],
    data = [
        IGNITION_ROOT + "ign_gazebo/src/systems:systems"
    ]
)

cc_binary(
    name = "libignition-launch-gazebogui.so",
    srcs = glob(
        [
            "plugins/gazebo_gui/*.cc",
            "plugins/gazebo_gui/*.hh",
        ],
        allow_empty = False,
    ),
    linkshared = True,
    deps = [
        IGNITION_ROOT + "ign_gazebo",
        IGNITION_ROOT + "ign_launch",
        IGNITION_ROOT + "ign_plugin/register",
    ],
    data = [
        IGNITION_ROOT + "ign_gazebo/src/systems:systems"
    ]

)

cc_binary(
    name = "libignition-launch-gazebo-factory.so",
    srcs = glob(
        [
            "plugins/gazebo_factory/*.cc",
            "plugins/gazebo_factory/*.hh",
        ],
        allow_empty = False,
    ),
    linkshared = True,
    deps = [
        IGNITION_ROOT + "ign_gazebo",
        IGNITION_ROOT + "ign_launch",
        IGNITION_ROOT + "ign_plugin/register",
    ],
    data = [
        IGNITION_ROOT + "ign_gazebo/src/systems:systems"
    ]
)

cc_binary(
    name = "libignition-launch-joystick.so",
    srcs = glob(
        [
            "plugins/joystick/*.cc",
            "plugins/joystick/*.hh",
        ],
        allow_empty = False,
    ),
    linkshared = True,
    deps = [
        IGNITION_ROOT + "ign_gazebo",
        IGNITION_ROOT + "ign_launch",
        IGNITION_ROOT + "ign_plugin/register",
    ],
)

cc_binary(
    name = "libignition-launch-joytotwist.so",
    srcs = glob(
        [
            "plugins/joy_to_twist/*.cc",
            "plugins/joy_to_twist/*.hh",
        ],
        allow_empty = False,
    ),
    linkshared = True,
    deps = [
        IGNITION_ROOT + "ign_gazebo",
        IGNITION_ROOT + "ign_launch",
        IGNITION_ROOT + "ign_plugin/register",
    ],
)

cc_library(
    name = "ign-launch-plugins",
    visibility = ["//visibility:public"],
    deps = [":libignition-launch-%s.so" % plugin.replace("_", "") for plugin in plugins] + [
        "libignition-launch-gazebo-factory.so",
        "libignition-launch-gazebo.so",
        "libignition-launch-gazebogui.so",
    ],
)

cmake_configure_file(
    name = "launch.rb",
    src = "src/cmdlaunch.rb.in",
    out = "cmdlaunch.rb",
    cmakelists = ["CMakeLists.txt"],
    defines = [
        "library_location=libignition-launch.so",
        "PROJECT_VERSION_FULL=%d.%d.%d" % (PROJECT_MAJOR, PROJECT_MINOR, PROJECT_PATCH),  # noqa
        "IGN_LIBRARY_NAME=%s" % PROJECT_NAME,
    ],
)

CMDS = "    - launch : Run and manage executables and plugins."

generate_yaml(
    name = "launch.yaml",
    commands = CMDS,
    library_name = PROJECT_NAME,
    library_version = "%d.%d.%d" % (PROJECT_MAJOR, PROJECT_MINOR, PROJECT_PATCH),
    ruby_target = "launch.rb",
)


